--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "mongoose": "^8.3.1",
     "nestjs-yup": "^1.0.13",
     "reflect-metadata": "^0.2.0",
