--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
-    "nestjs-yup": "^1.0.13",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "yup": "^1.4.0"
